global/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-net4-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd-net4.media-meter.in
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
